# magic_tg_desktop_app

./: mtc_comprehensive_rules.txt  planning.md  pyproject.toml  readme.md  requirements.txt  tasks.md
app/: __init__.py  main.py
app/gui/: __init__.py  deck_builder.py  main_window.py
app/gui/game_board/: __init__.py  card_display.py  card_widget.py  game_dialogs.py  main_board.py  zones.py
app/gui/widgets/: __init__.py  card_widget.py
app/logic/: __init__.py  game_engine.py
app/logic/rules/: __init__.py  rule_engine.py  rule_parser.py
app/models/: __init__.py  card.py  database.py  deck.py  game.py  player.py
app/utils/: __init__.py
tests/: __init__.py
